docs: platform migration decisions and a single task list
- ADR-0011: Quorus consumes consensus only through the generic QRaft engine; the
  interface stays JDK-typed and free of Quorus concepts
- ADR-0012: leave Vert.x for Java 27 virtual threads, ScopedValue and structured
  concurrency. Decisions: RT-Q1 no preview in production (Quorus task-scope
  abstraction); RT-Q2 JDK HttpsServer; RT-Q3 follow six-monthly Java releases;
  RT-Q4 Amazon Corretto 27 images
- plan v1.31, §20 platform migration workstreams CE and RT; §6.1 retains raw
  evidence under docs-design/evidence/raw, never temp/
- the Outstanding Work Register is the single task list: the documentation review
  task list is merged in as Section H (original archived), with a §3 decision log and
  Sections I and J
- reviews moved to docs-design/reviews/; configuration handover archived
- Copilot instructions: direction of travel and the host-built image rule
- .gitattributes: raw evidence is stored and checked out byte-for-byte so manifest
  hashes stay valid